# trailslog

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: activities.example.toml  goals.example.toml
docs/meta/: 2026-07-13-why-trailslog.md  2026-07-14-capture-principles.md  2026-07-14-minimal-activity-capture-workflow.md  2026-07-14-what-belongs-in-meta.md  2026-07-14-why-recording-needs-rules.md  2026-07-15-how-messages-become-records.md  2026-07-15-when-an-explanation-becomes-knowledge.md  2026-07-15-why-meta-editing-is-an-open-question.md  2026-07-15_KA-1-why-meta-editing-is-an-open-question.md  2026-07-15_KA-2-when-an-explanation-becomes-knowledge.md  2026-07-16-git-as-knowledge-history.md  2026-07-16-how-the-knowledge-origin-concept-emerged.md  2026-07-16-how-we-started-using-git-for-knowledge-history.md  2026-07-16-knowledge-and-knowledge-origin.md  2026-07-16-knowledge-marking-experiment.md  2026-07-16-user-observation-not-everyone-needs-a-journal.md  2026-07-16-user-observation-system-became-usable.md  2026-07-16_KA-how-the-knowledge-origin-concept-emerged.md  2026-07-16_KA-how-we-started-using-git-for-knowledge-history.md  2026-07-16_KA-knowledge-marking-experiment.md  2026-07-18-boundaries-of-knowledge-units.md  2026-07-18_1-KA-context-growth-from-meta.md  2026-07-18_1-context-growth-from-meta.md  2026-07-18_2-KA-three-context-growth-experiments.md  2026-07-18_2-three-context-growth-experiments.md  2026-07-18_3-growing-context-as-the-basis-of-knowledge-formation.md  2026-07-18_4-KA-why-growing-context-became-the-central-hypothesis.md  (+4 more)
(+19 files in other folders)
