[project]
name = "trailslog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vvvolf", email = "vvvolf@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot",
    "dotenv",
    "tomli",
]

[project.scripts]
trailslog = "trailslog:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
